# distillery

./: .dockerignore  .env.example  .gitignore  .grype.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gateway  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  cliff.toml  demo.cast  distillery-brainstorm.md  distillery-dev.yaml  distillery.lambda.yaml  distillery.yaml  distillery.yaml.example  gateway.yaml.example  mkdocs.yml  plugin.json  prefect.yaml  promptfooconfig.yaml  pyproject.toml  server.json
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: session-start.py
.claude-plugin/skills/: CONVENTIONS.md  README.md
.claude/agents/: distillery-researcher.md
.claude/skills/: CONVENTIONS.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bench-graph-regression-cell.yml  bench-longmemeval.yml  bench-variance-gate.yml  changelog.yml  ci.yml  claude-code-review.yml  cross-post-blog.yml  dependabot-auto-merge.yml  deploy.yml  eval-nightly.yml  eval-pr.yml  fly-deploy.yml  pages.yml  pypi-publish.yml  scheduler.yml  staging-deploy.yml  supply-chain.yml
.minimal/: minimal.toml
bench/: HEADLINE.md  LIMITATIONS.md  METHODOLOGY.md  README.md  badge_ndcg10.json  badge_r10.json  badge_r5.json
bench/probes/: recency-toggle.md
bench/results/: SUMMARY.md  graph_regression_cell_a.json  results_longmemeval_hybrid_session_off_bge-small_20260510T074758Z.jsonl  results_longmemeval_hybrid_session_off_bge-small_20260517T075244Z.jsonl  results_longmemeval_hybrid_session_off_bge-small_20260524T081219Z.jsonl  results_longmemeval_hybrid_session_off_bge-small_20260531T083928Z.jsonl  results_longmemeval_hybrid_session_on_bge-small_20260510T074825Z.jsonl  results_longmemeval_hybrid_session_on_bge-small_20260517T075611Z.jsonl  results_longmemeval_hybrid_session_on_bge-small_20260524T081216Z.jsonl  results_longmemeval_hybrid_session_on_bge-small_20260531T083837Z.jsonl  results_longmemeval_hybrid_turn_off_bge-small_20260510T085743Z.jsonl  results_longmemeval_hybrid_turn_off_bge-small_20260517T090508Z.jsonl  results_longmemeval_hybrid_turn_off_bge-small_20260524T092102Z.jsonl  results_longmemeval_hybrid_turn_off_bge-small_20260531T094903Z.jsonl  results_longmemeval_hybrid_turn_on_bge-small_20260510T091847Z.jsonl  results_longmemeval_hybrid_turn_on_bge-small_20260517T090706Z.jsonl  results_longmemeval_hybrid_turn_on_bge-small_20260524T092353Z.jsonl  results_longmemeval_hybrid_turn_on_bge-small_20260531T094837Z.jsonl  results_longmemeval_raw_session_off_bge-small_20260510T074820Z.jsonl  results_longmemeval_raw_session_off_bge-small_20260517T075435Z.jsonl  results_longmemeval_raw_session_off_bge-small_20260524T081110Z.jsonl  results_longmemeval_raw_session_off_bge-small_20260531T083832Z.jsonl  results_longmemeval_raw_session_on_bge-small_20260510T074744Z.jsonl  results_longmemeval_raw_session_on_bge-small_20260517T075540Z.jsonl  results_longmemeval_raw_session_on_bge-small_20260524T081102Z.jsonl  results_longmemeval_raw_session_on_bge-small_20260531T083825Z.jsonl  results_longmemeval_raw_turn_off_bge-small_20260510T085648Z.jsonl  results_longmemeval_raw_turn_off_bge-small_20260517T092559Z.jsonl  results_longmemeval_raw_turn_off_bge-small_20260524T092234Z.jsonl  results_longmemeval_raw_turn_off_bge-small_20260531T094859Z.jsonl  results_longmemeval_raw_turn_on_bge-small_20260510T090021Z.jsonl  results_longmemeval_raw_turn_on_bge-small_20260517T090917Z.jsonl  results_longmemeval_raw_turn_on_bge-small_20260524T092134Z.jsonl  results_longmemeval_raw_turn_on_bge-small_20260531T094953Z.jsonl  summary_longmemeval_hybrid_session_off_bge-small_20260505T170527Z.json  summary_longmemeval_hybrid_session_off_bge-small_20260506T075754Z.json  summary_longmemeval_hybrid_session_off_bge-small_20260507T080533Z.json  summary_longmemeval_hybrid_session_off_bge-small_20260508T071505Z.json  summary_longmemeval_hybrid_session_off_bge-small_20260509T073204Z.json  summary_longmemeval_hybrid_session_off_bge-small_20260510T074758Z.json  (+219 more)
browser-extension/: README.md  manifest.json
browser-extension/src/: auth.js  background.js  content.js  mcp-client.js  offline-queue.js  options.css  options.html  options.js  popup.css  popup.html  popup.js
dashboard/: index.html  package-lock.json  package.json  recall.html  tsconfig.json  vite.config.recall.ts  vite.config.ts  vitest.config.ts
dashboard/src/: App.svelte
deploy/aws/: Dockerfile
deploy/fly/: Dockerfile  README.md  distillery-fly.yaml  fly.toml
deploy/prefect/: README.md  (+2 more)
docs/: BACKLOG.md  ROADMAP.md  _config.yml  architecture.md  benchmarks.md  contributing.md  demo-deck.md  deployment.md  home.md  index.html  index.md  mcp-setup.md  plugin.md  presentation.html  roadmap.md  team-setup.md
extension/: manifest.json
issues/: 1.md
scripts/: cross_post_blog.py  demo-record.sh  promptfoo_grader.py  promptfoo_provider.py  smoke-test.sh
skills/: CONVENTIONS.md  README.md
spikes/: README.md  network.py  post_next.py  q1_structural_holes.py  q2_resonance_gap.py  q3_link_prediction.py
terraform/: backend.tf  endpoint.tf  main.tf  variables.tf
tests/: __init__.py  conftest.py  test_aggregator.py  test_async_sync_pipeline.py  test_auto_link_on_write.py  test_budget.py  test_budget_error_categorization.py  test_bulk_ingest.py  test_classification_engine.py  test_cli.py  test_cli_bench.py  test_cli_export_import.py  test_cloud_storage.py  test_config.py  test_conflict.py  test_context.py  test_corrections.py  test_dedup.py  test_dedup_integrity_verify.py  test_duckdb_sanitise_last_error.py  test_duckdb_store.py  test_e2e_mcp.py  test_elasticsearch_store.py  test_embedding.py  test_entity_promotion.py  test_entry.py  test_entry_type_suggestions.py  test_eval_claude.py  test_eval_unit.py  test_expiry.py  test_fastembed_provider.py  test_feedback.py  test_feeds.py  test_feeds_reader.py  test_feeds_tags.py  test_feeds_url_guard.py  test_find_similar_batch.py  test_find_similar_extended.py  test_github_sync.py  test_github_tag.py  (+68 more)
(+1219 files in other folders)
