[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distillery"
version = "0.1.0"
description = "A configurable embedding system with DuckDB storage and MCP server integration"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Distillery Team"}
]
license = {text = "MIT"}

dependencies = [
    "duckdb>=0.8.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "mcp>=0.1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.0",
]

[project.scripts]
distillery = "distillery.cli:main"
distillery-mcp = "distillery.mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/distillery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py38"
