[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distillery-mcp"
version = "0.1.1"
description = "A configurable embedding system with DuckDB storage and MCP server integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Distillery Contributors"}
]
license = {text = "Apache-2.0"}
keywords = ["knowledge-base", "second-brain", "embeddings", "mcp", "claude-code", "vector-search", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "duckdb~=1.5.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "fastmcp>=2.12.0",
    "defusedxml>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.0",
    "types-PyYAML>=6.0",
    "types-defusedxml>=0.7.0",
]
docs = [
    "mkdocs-material>=9.5",
]
eval = []
ragas = [
    "ragas>=0.2.0",
    "datasets>=2.14.0",
]

[project.scripts]
distillery = "distillery.cli:main"
distillery-mcp = "distillery.mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/distillery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "eval: Claude-powered skill evaluation tests (requires claude CLI)",
]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
# FastMCP's @server.tool decorator doesn't preserve function signatures in its
# type stubs (returns FunctionTool, not the original callable type). Suppress
# the resulting untyped-decorator noise for the MCP server module only.
module = "distillery.mcp.server"
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
# The eval module has optional dependencies (anthropic, ragas, datasets) that
# are not installed in the base dev environment. Suppress import-not-found for
# the eval sub-package and its optional third-party dependencies.
module = [
    "distillery.eval.*",
    "ragas",
    "ragas.*",
    "datasets",
    "datasets.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["distillery"]

[tool.coverage.run]
source = ["src/distillery"]
omit = [
    "src/distillery/mcp/__main__.py",
    "src/distillery/mcp/middleware.py",
    "src/distillery/mcp/server.py",
    "src/distillery/store/__main__.py",
    "src/distillery/eval/runner.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
